--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,2 +1,10 @@
-$test_color: blue;
-$red: red;
+//colors
+$main_bg: #101010;
+$main_text_color: #fdfdfd;
+$seconds_text_color: #b9314f;
+$buttons_color: #9d253f;
+$black: #000000;
+$form_placeholder: #ababab;
+$under_photo_gradient: linear-gradient(180deg, #6D1B2D 55.73%, rgba(0, 0, 0, 0.00) 100%);
+
+//font sizes
