--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,10 +1,22 @@
 //colors
+$section_color: #101010;
 $main_bg: #101010;
 $main_text_color: #fdfdfd;
 $seconds_text_color: #b9314f;
 $buttons_color: #9d253f;
 $black: #000000;
 $form_placeholder: #ababab;
-$under_photo_gradient: linear-gradient(180deg, #6D1B2D 55.73%, rgba(0, 0, 0, 0.00) 100%);
+$additional_bg: #6d1b2d;
+$under_photo_gradient: linear-gradient(
+  180deg,
+  #6d1b2d 55.73%,
+  rgba(0, 0, 0, 0) 100%
+);
+
+//sizes
+
+$min_mobile: 360px;
+$min_tablet: 768px;
+$min_desktop: 1440px;
 
 //font sizes
