--- a/components/Common/Container/Container.module.scss
+++ b/components/Common/Container/Container.module.scss
@@ -2,6 +2,7 @@
 
 .section {
   padding: 60px 0px;
+  position: relative;
   background-color: $section_color;
   @media screen and (min-width: $min_tablet) {
     padding: 80px 0px;
@@ -21,8 +22,8 @@
   }
   @media screen and (min-width: $min_tablet) {
     max-width: $min_tablet;
-    padding-left: 26px;
-    padding-right: 26px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
   @media screen and (min-width: $min_desktop) {
     max-width: $min_desktop;
