--- a/components/MyDream/MyDream.module.scss
+++ b/components/MyDream/MyDream.module.scss
@@ -90,7 +90,7 @@
   margin-bottom: 32px;
   @media screen and (min-width: $min_tablet) {
     @include fontRegular(18px, 400, 25.2px);
-    text-wrap: balances;
+    text-wrap: balance;
   }
   @media screen and (min-width: $min_desktop) {
   }
