--- a/components/AboutPeopleOnTheWay/AboutPeopleOnTheWay.module.scss
+++ b/components/AboutPeopleOnTheWay/AboutPeopleOnTheWay.module.scss
@@ -47,7 +47,7 @@
   padding: 12px 20px;
 
   @include fontRegular(24px, 400, 24px, $main_text_color, center);
-  transition: scale 0.3s ease;
+  transition: all 0.3s ease;
 
   @media screen and (min-width: $min_tablet) {
     min-width: 356px;
@@ -59,5 +59,9 @@
   &:hover,
   &:focus {
     scale: 1.05;
+    background-color: $seconds_text_color;
+    & > svg {
+      fill: $main_text_color;
+    }
   }
 }
