--- a/components/SocialLinks/SocialLinks.module.scss
+++ b/components/SocialLinks/SocialLinks.module.scss
@@ -19,7 +19,7 @@
   gap: 10px;
 }
 
-.item {
+.link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -27,8 +27,22 @@
   height: 35px;
   background-color: $black;
   border-radius: 50%;
+  transition: all .3s ease;
   @media screen and (min-width: $min_tablet) {
     width: 48px;
     height: 48px;
+  }
+  &:hover, &:focus {
+    background-color: $seconds_text_color;
+  }
+}
+
+.icon {
+  width: 18px;
+  height: 18px;
+  fill: $main_text_color;
+  @media screen and (min-width: $min_tablet) {
+    width: 19px;
+    height: 19px;
   }
 }
