--- a/components/Header/MobileNav/MobileNav.module.scss
+++ b/components/Header/MobileNav/MobileNav.module.scss
@@ -18,6 +18,7 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   @media screen and (min-width: $min_tablet) {
     width: 392px;
+    padding: 30px 16px;
   }
   @media screen and (min-width: $min_desktop) {
     display: none;
@@ -27,7 +28,7 @@
 .menu_open {
   opacity: 1;
   pointer-events: all;
-  transform: translateX(100%);
+  transform: translateX(99.5%);
 }
 
 .wrap {
@@ -35,10 +36,14 @@
   gap: 18px;
   align-items: center;
   margin-bottom: 70px;
+  @media screen and (min-width: $min_tablet) {
+    gap: 43px;
+  }
 }
 
 .wrap_logo {
   display: flex;
+  flex-direction: row;
   gap: 16px;
   width: 222px;
 }
@@ -55,6 +60,9 @@
 
 .title {
   @include fontRegular(16px, 400, 22.4px);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop {
@@ -81,4 +89,22 @@
   left: 0;
   width: 100vw;
   height: 100vh;
+}
+
+.hover {
+  color: $main_text_color;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover .title {
+    color: $seconds_text_color;
+  }
+  &:hover {
+    color: $seconds_text_color;
+  }
+}
+
+.logo {
+  width: 40px;
+  height: 40px;
 }
