added science section

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -52,3 +52,9 @@ button {
   background-color: transparent;
   cursor: pointer;
 }
+
+.bullet {
+  @media screen and (min-width: $min_desktop) {
+    display: none !important;
+  }
+}
