--- a/components/About/About.module.scss
+++ b/components/About/About.module.scss
@@ -68,6 +68,7 @@
   margin-bottom: 16px;
   @media screen and (min-width: $min_desktop) {
     @include fontRegular(18px, 400, 25.2px);
+    margin-bottom: 0px;
   }
 }
 
