--- a/components/Research/Research.module.scss
+++ b/components/Research/Research.module.scss
@@ -14,6 +14,7 @@
 }
 
 .content_container {
+  position: relative;
   background-image: radial-gradient(
     circle,
     rgba(109, 27, 45, 0.2) 39%,
@@ -53,6 +54,7 @@
     gap: 44px;
     margin-bottom: 0px;
     width: calc((100% - 9px) / 2);
+    padding-bottom: 60px;
   }
 }
 
@@ -66,6 +68,17 @@
   }
 }
 
+.arrow {
+  display: none;
+
+  @media screen and (min-width: $min_desktop) {
+    display: block;
+    position: absolute;
+    bottom: 9%;
+    left: 25%;
+    animation: pulse 3s infinite;
+  }
+}
 .img {
   @media screen and (min-width: $min_tablet) {
     width: 628px;
@@ -73,5 +86,17 @@
     margin-inline: auto;
     writing-mode: horizontal-tb;
     backdrop-filter: blur(10px);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: rotate(0deg) translateY(0px) scale(1);
+  }
+  50% {
+    transform: rotate(5deg) translateY(10px) scale(1.05);
+  }
+  100% {
+    transform: rotate(0deg) translateY(0px) scale(1);
   }
 }
