--- a/components/Feedback/Feedback.module.scss
+++ b/components/Feedback/Feedback.module.scss
@@ -11,6 +11,7 @@
 }
 
 .wrap {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 60px;
@@ -130,5 +131,28 @@
   transform: translate(-50%, -50%);
   @media screen and (min-width: $min_tablet) {
     width: 368px;
+  }
+}
+
+.arrow {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  left: 777px;
+  animation: arrow-move 3s infinite;
+  transform-origin: top left;
+  @media screen and (min-width: $min_desktop) {
+    display: block;
+  }
+}
+@keyframes arrow-move {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(4deg);
+  }
+  100% {
+    transform: rotate(0deg);
   }
 }
