changed slider pagination

--- a/components/CoAuThorship/Books/Books.module.scss
+++ b/components/CoAuThorship/Books/Books.module.scss
@@ -9,7 +9,7 @@
 //Swiper
 
 .pagination {
-  background: red !important;
+  opacity: 1 !important;
   @media screen and (min-width: $min_tablet) {
     .swiper > .swiper-pagination {
       display: none !important;
