--- a/components/Research/ResearchSlider/ResearchSlider.module.scss
+++ b/components/Research/ResearchSlider/ResearchSlider.module.scss
@@ -6,7 +6,13 @@
 
 //Swiper
 .pagination {
-  background: red !important;
+  opacity: 1 !important;
+  width: 10px;
+  height: 10px;
+  @media screen and (min-width: $min_tablet) {
+    width: 16px !important;
+    height: 16px !important;
+  }
   @media screen and (min-width: $min_desktop) {
     .swiper > .swiper-pagination {
       display: none !important;
@@ -32,6 +38,7 @@
   margin-bottom: 30px;
   @media screen and (min-width: $min_tablet) {
     padding: 18px 29px;
+    margin-bottom: 50px;
   }
   @media screen and (min-width: $min_desktop) {
     padding: 18px 56.5px;
