--- a/components/Header/Nav/Nav.module.scss
+++ b/components/Header/Nav/Nav.module.scss
@@ -75,7 +75,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  @media screen and (max-width: $min_desktop) {
+  @media screen and (max-width: 1440.5) {
     overflow: hidden;
     max-height: 0;
     opacity: 0;
