--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -1,5 +1,10 @@
 @import "/styles/main.scss";
 
+.styled_section {
+  overflow: hidden;
+  position: relative;
+}
+
 .text {
   @include fontRegular(14px, 400, 19.5px);
   max-width: 242px;
