--- a/components/CoAuThorship/Books/Books.module.scss
+++ b/components/CoAuThorship/Books/Books.module.scss
@@ -71,7 +71,7 @@
     justify-content: center;
     gap: 24px;
   }
-  @media screen and (min-width: $min_desktop) {
+  @media screen and (min-width: $big_pc) {
     gap: 133px;
   }
 }
