--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -18,6 +18,8 @@ $dropdown_bg: #1f1f1f;
 
 $min_mobile: 360px;
 $min_tablet: 768px;
+$big_pc: 1440px;
+$mac: 1312px;
 $min_desktop: 1280px;
 
 //font sizes
