changed the hero img and increased the size

--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -68,6 +68,8 @@
   @media screen and (min-width: $min_tablet) {
     display: block;
     backdrop-filter: blur(4px);
+    width: 360px;
+    height: 516px;
   }
   @media screen and (min-width: $min_desktop) {
     width: 519px;
