moved all components of main page to Main folder

--- a/components/Main/Hero/Hero.module.scss
+++ b/components/Main/Hero/Hero.module.scss
@@ -83,7 +83,7 @@
 
   margin-bottom: 55px;
   @media screen and (min-width: $min_tablet) {
-    background-image: url("../../public//assets/images/hero_bg.svg");
+    background-image: url("../../../public//assets/images/hero_bg.svg");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: 110% 50%;
