--- a/components/Common/Container/Container.module.scss
+++ b/components/Common/Container/Container.module.scss
@@ -4,6 +4,8 @@
   padding: 60px 0px;
   position: relative;
   background-color: $section_color;
+  max-width: 100vw;
+  overflow: hidden;
   @media screen and (min-width: $min_tablet) {
     padding: 80px 0px;
   }
