--- a/components/Services/ServicesForYouIf/ServicesForYouIf.module.scss
+++ b/components/Services/ServicesForYouIf/ServicesForYouIf.module.scss
@@ -74,4 +74,10 @@
 
 .icon {
   fill: $main_text_color;
+  width: 24px;
+  height: 24px;
+  @media screen and (min-width: $min_tablet) {
+    width: 30px;
+    height: 30px;
+  }
 }
