--- a/components/Services/Feedbacks/FeedbacksSlider/FeedbacksSlider.module.scss
+++ b/components/Services/Feedbacks/FeedbacksSlider/FeedbacksSlider.module.scss
@@ -36,7 +36,7 @@
   align-items: center;
   justify-content: center;
   min-height: 590px;
-  padding: 0px 18px;
+  padding: 62px 18px;
   gap: 24px;
 
   border-radius: 30px;
@@ -44,7 +44,7 @@
   border: 1px solid $seconds_text_color;
   @media screen and (min-width: $min_tablet) {
     flex-direction: row;
-    padding: 0px 50px;
+    padding: 46px 50px;
     min-height: 542px;
   }
   @media screen and (min-width: $min_desktop) {
@@ -57,13 +57,6 @@
   flex-direction: column;
   @media screen and (min-width: $min_tablet) {
     order: 2;
-  }
-
-}
-
-.img {
-  @media screen and (min-width: $min_tablet) {
-    // order: 1;
   }
 }
 
@@ -78,9 +71,41 @@
 
 .card_description {
   @include fontRegular(14px, 400, 19.6px);
+  transition: max-height 1550ms ease;
+
   @media screen and (min-width: $min_tablet) {
     @include fontRegular(16px, 400, 22.4px);
   }
+}
+
+.big_card_description {
+  display: -webkit-box;
+  -webkit-line-clamp: 18;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 350px;
+  margin-bottom: 32px;
+  @media screen and (min-width: $min_tablet) {
+    -webkit-line-clamp: 12;
+    max-height: 270px;
+  }
+
+}
+
+.show_text {
+  -webkit-line-clamp: unset;
+  max-height: 1500px;
+}
+
+.show_more_btn {
+  @include fontRegular(16px, 400, 22.4px);
+  margin: 0 auto;
+  text-decoration: underline;
+  @media screen and (min-width: $min_tablet) {
+    margin: 0;
+  }
+
 }
 
 //arrow buttons
@@ -108,7 +133,8 @@
   background-color: #83263b;
   padding: 8px;
   transition: scale 250ms ease;
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     scale: 1.1;
   }
 }
