added nailing and retreat pages

--- a/components/Services/Offline-meetings/AboutRetreat/AboutRetreat.module.scss
+++ b/components/Services/Offline-meetings/AboutRetreat/AboutRetreat.module.scss
@@ -3,24 +3,13 @@
 .container {
   display: grid;
   gap: 24px;
+
   @media screen and (min-width: $min_tablet) {
     gap: 32px;
   }
   @media screen and (min-width: $min_desktop) {
-    grid-template-columns: 1fr 519px;
-  }
-}
-
-.section {
-  @media screen and (min-width: $min_desktop) {
-    background-image: radial-gradient(
-      circle,
-      rgba(109, 27, 45, 0.14) 8%,
-      rgba(0, 0, 0, 0) 79%
-    );
-    background-size: 440px 450px;
-    background-position: 10% 50%;
-    background-repeat: no-repeat;
+    gap: 0px;
+    align-items: center;
   }
 }
 
@@ -30,25 +19,8 @@
     @include fontRegular(36px, 400, 36px);
   }
   @media screen and (min-width: $min_desktop) {
-    grid-column: 1;
+    grid-column: 2;
     grid-row: 1;
-
-    display: flex;
-    align-items: center;
-    height: 100%;
-  }
-}
-
-.text_list {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  @media screen and (min-width: $min_tablet) {
-    gap: 24px;
-  }
-  @media screen and (min-width: $min_desktop) {
-    grid-column: 1;
-    grid-row: 2;
   }
 }
 
@@ -57,11 +29,36 @@
   @media screen and (min-width: $min_tablet) {
     @include fontRegular(18px, 400, 25.2px);
   }
+  @media screen and (min-width: $min_desktop) {
+  }
+}
+
+.text_container {
+  display: grid;
+  gap: 24px;
+  @media screen and (min-width: $min_desktop) {
+    grid-column: 2;
+    grid-row: 2;
+  }
+}
+
+.list {
+  list-style: disc;
+  padding-left: 20px;
+  @media screen and (min-width: $min_tablet) {
+    padding-left: 24px;
+  }
+  @media screen and (min-width: $min_desktop) {
+  }
 }
 
 .img {
   @media screen and (min-width: $min_desktop) {
-    grid-column: 2;
+    width: 519px;
+    height: 400px;
+    object-fit: contain;
+    grid-column: 1;
     grid-row: 1 / span 2;
+    margin-right: 133px;
   }
 }
