--- a/components/Services/Offline-meetings/AboutPractice/AboutPractice.module.scss
+++ b/components/Services/Offline-meetings/AboutPractice/AboutPractice.module.scss
@@ -70,6 +70,7 @@
     @include fontRegular(32px, 400, 32px);
   }
   @media screen and (min-width: $min_desktop) {
+    flex: 1
   }
 }
 
@@ -83,8 +84,8 @@
     @include fontRegular(18px, 400, 25.2px);
   }
   @media screen and (min-width: $min_desktop) {
-    width: 410px;
-    text-wrap: balance
+    width: 426px;
+    text-wrap: balance;
   }
 }
 
