--- a/components/Services/Offline-meetings/AboutPublicSpeeches/AboutPublicSpeeches.module.scss
+++ b/components/Services/Offline-meetings/AboutPublicSpeeches/AboutPublicSpeeches.module.scss
@@ -12,23 +12,18 @@
     align-items: center;
   }
 }
-
 .title {
+  @include fontRegular(28px, 400, 39.2px);
+  @media screen and (min-width: $min_tablet) {
+    @include fontRegular(36px, 400, 36px);
+  }
   @media screen and (min-width: $min_desktop) {
     grid-column: 2;
     grid-row: 1;
   }
 }
 
-.text {
-  @include fontRegular(16px, 400, 22.4px);
-  @media screen and (min-width: $min_tablet) {
-    @include fontRegular(18px, 400, 25.2px);
-  }
-
-}
-
-.text_container {
+.list {
   display: grid;
   gap: 24px;
   @media screen and (min-width: $min_desktop) {
@@ -37,22 +32,27 @@
   }
 }
 
-.list {
-  list-style: disc;
-  padding-left: 20px;
+.text {
+  @include fontRegular(16px, 400, 22.4px);
   @media screen and (min-width: $min_tablet) {
-    padding-left: 24px;
+    @include fontRegular(18px, 400, 25.2px);
   }
-
 }
 
 .img {
   @media screen and (min-width: $min_desktop) {
     width: 519px;
-    height: 400px;
+    height: 562px;
     object-fit: contain;
     grid-column: 1;
     grid-row: 1 / span 2;
     margin-right: 133px;
+  }
+}
+
+.img_in_list {
+  display: none;
+  @media screen and (min-width: $min_desktop) {
+    display: block;
   }
 }
