--- a/components/Services/Feedbacks/FeedbacksSlider/FeedbacksSlider.module.scss
+++ b/components/Services/Feedbacks/FeedbacksSlider/FeedbacksSlider.module.scss
@@ -48,7 +48,7 @@
     min-height: 542px;
   }
   @media screen and (min-width: $min_desktop) {
-    min-height: 363px;
+    min-height: 400px;
   }
 }
 
@@ -114,7 +114,7 @@
   display: none;
   @media screen and (min-width: $min_desktop) {
     position: absolute;
-    top: -25.5%;
+    top: -103px;
     right: 10%;
 
     display: flex;
