added modals for services

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,6 +4,7 @@ $main_bg: #101010;
 $main_text_color: #fdfdfd;
 $seconds_text_color: #b9314f;
 $buttons_color: #9d253f;
+$buttons_hover_color: #e24668;
 $black: #000000;
 $form_placeholder: #ababab;
 $additional_bg: #6d1b2d;
