--- a/components/Services/Hero/Hero.module.scss
+++ b/components/Services/Hero/Hero.module.scss
@@ -8,6 +8,12 @@
   }
 }
 
+.text_wrapper {
+  @media screen and (min-width: $min_desktop) {
+    flex: 1;
+  }
+}
+
 .title {
   @include fontRegular(32px, 400, 44.8px);
   margin-bottom: 28px;
@@ -36,6 +42,13 @@
 
   @include fontRegular(16px, 600, 16px);
 
+  transition: all 0.3s ease;
+
+  &:hover,
+  &:focus {
+    scale: 1.05;
+    background-color: $buttons_hover_color;
+  }
   @media screen and (min-width: $min_tablet) {
     width: 356px;
     height: 60px;
