--- a/components/Services/Feedbacks/FeedbacksSlider/FeedbacksSlider.module.scss
+++ b/components/Services/Feedbacks/FeedbacksSlider/FeedbacksSlider.module.scss
@@ -1,5 +1,23 @@
 @import "/styles/main.scss";
 
+@keyframes increaseText {
+  from {
+    max-height: 360px;
+  }
+  to {
+    max-height: 1500px;
+  }
+}
+
+@keyframes decrease {
+  from {
+    max-height: 1500px;
+  }
+  to {
+    max-height: 360px;
+  }
+}
+
 //swiper
 .swiper {
   position: relative;
@@ -36,7 +54,7 @@
   align-items: center;
   justify-content: center;
   min-height: 590px;
-  padding: 62px 18px;
+  padding: 22px 18px;
   gap: 24px;
 
   border-radius: 30px;
@@ -44,11 +62,11 @@
   border: 1px solid $seconds_text_color;
   @media screen and (min-width: $min_tablet) {
     flex-direction: row;
-    padding: 46px 50px;
-    min-height: 542px;
+    padding: 26px 50px;
+    min-height: 420px;
   }
   @media screen and (min-width: $min_desktop) {
-    min-height: 400px;
+    min-height: 343px;
   }
 }
 
@@ -63,15 +81,15 @@
 .card_title {
   @include fontRegular(24px, 400, 24px);
   margin-right: auto;
-  margin-bottom: 28px;
+  margin-bottom: 24px;
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(32px, 400, 32px);
+    @include fontRegular(30px, 400, 30px);
   }
 }
 
 .card_description {
   @include fontRegular(14px, 400, 19.6px);
-  transition: max-height 1550ms ease;
+  transition: all 1550ms ease;
 
   @media screen and (min-width: $min_tablet) {
     @include fontRegular(16px, 400, 22.4px);
@@ -85,18 +103,18 @@
   overflow: hidden;
   text-overflow: ellipsis;
   max-height: 350px;
-  margin-bottom: 32px;
+  margin-bottom: 28px;
   @media screen and (min-width: $min_tablet) {
-    -webkit-line-clamp: 12;
-    max-height: 270px;
+    -webkit-line-clamp: 9;
+    max-height: 210px;
   }
-
 }
 
 .show_text {
   -webkit-line-clamp: unset;
   max-height: 1500px;
 }
+
 
 .show_more_btn {
   @include fontRegular(16px, 400, 22.4px);
@@ -105,7 +123,6 @@
   @media screen and (min-width: $min_tablet) {
     margin: 0;
   }
-
 }
 
 //arrow buttons
