--- a/components/Common/QuestionAnswer/QuestionAnswer.module.scss
+++ b/components/Common/QuestionAnswer/QuestionAnswer.module.scss
@@ -27,7 +27,7 @@
 .drop_icon {
   width: 30px;
   height: 30px;
-  fill: #9D253F;
+  fill: #9d253f;
   transform: rotate(0deg);
   transition-property: transform;
   transition-duration: 350ms;
@@ -90,7 +90,7 @@
   }
 }
 
-.title {
+.main_title {
   margin-bottom: 48px;
   color: $main_text_color;
   @include fontRegular(40px, 400, 48px);
@@ -103,6 +103,21 @@
   @media screen and (min-width: $min_desktop) {
     margin-bottom: 80px;
     @include fontRegular(64px, 400, 89.6px);
+  }
+}
+
+.title {
+  margin-bottom: 40px;
+  color: $main_text_color;
+  @include fontRegular(28px, 400, 39.2px);
+  leading-trim: both;
+  text-edge: cap;
+  @media screen and (min-width: $min_tablet) {
+    @include fontRegular(36px, 400, 43.2px);
+    margin-bottom: 48px;
+  }
+  @media screen and (min-width: $min_desktop) {
+    margin-bottom: 60px;
   }
 }
 
