--- a/components/TherapySessions/Pricing/Pricing.module.scss
+++ b/components/TherapySessions/Pricing/Pricing.module.scss
@@ -1,1 +1,127 @@
 @import "/styles/main.scss";
+
+.section {
+  margin-bottom: 32px;
+  @media screen and (min-width: $min_tablet) {
+    margin-bottom: 40px;
+  }
+}
+.cont{
+  display: flex;
+  flex-direction: row-reverse;
+}
+.title {
+  @include fontRegular(28px, 400, 39.2px);
+  margin-bottom: 24px;
+  @media screen and (min-width: $min_tablet) {
+    @include fontRegular(36px, 400, 43.2px);
+    margin-bottom: 32px;
+  }
+  @media screen and (min-width: $min_desktop) {
+    margin-bottom: 60px;
+  }
+}
+
+.title_accent {
+  display: block;
+  color: $buttons_hover_color;
+}
+
+.desc {
+  color: $main_text_color;
+  @include fontRegular(16px, 400, 22.4px);
+  @media screen and (min-width: $min_tablet) {
+    @include fontRegular(18px, 400, 22.5px);
+  }
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  @media screen and (min-width: $min_tablet) {
+    gap: 24px;
+  }
+}
+
+.card {
+  border-radius: 30px;
+  background-color: $main_text_color;
+
+  display: flex;
+  width: 328px;
+  padding: 20px 0px;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  justify-content: center;
+  @media screen and (min-width: $min_tablet) {
+    flex-direction: row;
+    gap: 84px;
+    width: 736px;
+    padding: 24px 32px;
+    justify-content: unset;
+  }
+  @media screen and (min-width: $min_desktop) {
+    width: 1280px;
+    padding: 30px 43px;
+  }
+}
+
+.card_wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  @media screen and (min-width: $min_tablet) {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+  }
+}
+
+.card_title {
+  @include fontRegular(28px, 400, 39.2px, $section_color, center);
+  @media screen and (min-width: $min_desktop) {
+    display: flex;
+    gap: 10px;
+  }
+}
+
+.card_title_add {
+  display: block;
+  @include fontRegular(14px, 400, 19.6px, $section_color, center);
+  @media screen and (min-width: $min_tablet) {
+    display: none;
+  }
+  @media screen and (min-width: $min_desktop) {
+    @include fontRegular(28px, 400, 39.2px, $section_color);
+    display: block;
+  }
+}
+
+.card_price {
+  @include fontRegular(28px, 400, 39.2px, $section_color, center);
+  @media screen and (min-width: $min_desktop) {
+    @include fontRegular(32px, 400, 38.4px, $section_color);
+  }
+}
+
+.button {
+  font-family: inherit;
+  display: flex;
+  padding: 20px 50px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  background-color: $buttons_color;
+  @include fontRegular(16px, 600, 19.2px);
+  transition: all 0.3s ease;
+  &:hover,
+  :focus {
+    scale: 1.05;
+    background-color: $buttons_hover_color;
+  }
+  &:active {
+    background-color: #83263b;
+  }
+}
