--- a/components/Services/Offline-meetings/AboutPublicSpeeches/AboutPublicSpeeches.module.scss
+++ b/components/Services/Offline-meetings/AboutPublicSpeeches/AboutPublicSpeeches.module.scss
@@ -24,11 +24,14 @@
 }
 
 .list {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 24px;
   @media screen and (min-width: $min_desktop) {
     grid-column: 2;
     grid-row: 2;
+    gap: 32px;
+    align-self: self-end;
   }
 }
 
@@ -54,5 +57,6 @@
   display: none;
   @media screen and (min-width: $min_desktop) {
     display: block;
+    padding-top: 36px;
   }
 }
