--- a/components/Education/WhatIsWaitingForYou/WhatIsWaitingForYou.module.scss
+++ b/components/Education/WhatIsWaitingForYou/WhatIsWaitingForYou.module.scss
@@ -35,10 +35,11 @@
   border: 1px solid $seconds_text_color;
   background-color: $black;
   @media screen and (min-width: $min_tablet) {
-    padding: 40px 0px 40px 140px;
+    padding: 40px 37px 40px 140px;
   }
   @media screen and (min-width: $min_desktop) {
-    padding: 40px 0px 30px 60px;
+    padding: 40px 37px 30px 60px;
+    width: calc((100% - 48px) / 3);
   }
 }
 
@@ -50,22 +51,28 @@
 
 .column1_text {
   @include fontRegular(16px, 600, 16px);
-  flex: 2;
+  white-space: nowrap;
   @media screen and (min-width: $min_tablet) {
-    flex: 1;
     font-size: 18px;
-  }
-  @media screen and (min-width: $min_desktop) {
-    flex: 2;
   }
 }
 .column2_text {
   @include fontRegular(16px, 400, 22.4px);
-  flex: 5;
+}
+
+.warning_margin {
+  margin-bottom: 24px;
   @media screen and (min-width: $min_tablet) {
-    flex: 6;
+    margin-bottom: 32px;
   }
   @media screen and (min-width: $min_desktop) {
-    flex: 5;
+    margin-bottom: 40px;
+  }
+}
+
+.warning {
+  @include fontRegular(16px, 400, 22.4px);
+  @media screen and (min-width: $min_desktop) {
+    text-wrap: balance;
   }
 }
