--- a/components/Services/Offline-meetings/HowIsGoingNailing/HowIsGoingNailing.module.scss
+++ b/components/Services/Offline-meetings/HowIsGoingNailing/HowIsGoingNailing.module.scss
@@ -37,16 +37,16 @@
 
 
 .video {
-  width: 328px;
-  height: 182px;
+  max-width: 328px;
+  max-height: 182px;
   border-radius: 30px;
   @media screen and (min-width: $min_tablet) {
-    width: 736px;
-    height: 410px;
+    max-width: 736px;
+    max-height: 410px;
   }
   @media screen and (min-width: $min_desktop) {
-    width: 628px;
-    height: 350px;
+    max-width: 628px;
+    max-height: 350px;
   }
 }
 
