--- a/components/Products/GuidesAndBooks/GuidesAndBooks.module.scss
+++ b/components/Products/GuidesAndBooks/GuidesAndBooks.module.scss
@@ -1,6 +1,6 @@
 @import "/styles/main.scss";
 
-//list
+//checkboxes
 
 .list {
   display: grid;
@@ -20,15 +20,6 @@
   }
 }
 
-.text {
-  @include fontRegular(14px, 400, 19.6px);
-  text-wrap: balance;
-  @media screen and (min-width: $min_tablet) {
-    @include fontRegular(16px, 400, 22.4px);
-  }
-}
-
-//checkboxes
 .checkbox_wrapper {
   display: flex;
   align-items: center;
@@ -92,32 +83,31 @@
   transition: all 250ms cubic-bezier(1, 0, 0.37, 0.91);
 }
 
-//about arcanes text
-
-.about_arcanes {
-  @include fontRegular(14px, 400, 19.6px, $main_text_color, center);
-  margin-bottom: 24px;
+.text {
+  @include fontRegular(14px, 400, 19.6px);
+  text-wrap: balance;
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(16px, 400, 22.4px, $main_text_color, center);
-  }
-
-  &_second {
-    margin-bottom: 40px;
-    @include fontRegular(14px, 400, 19.6px, $main_text_color, center);
-
-    @media screen and (min-width: $min_tablet) {
-      margin-bottom: 48px;
-      @include fontRegular(16px, 400, 22.4px, $main_text_color, center);
-    }
-    @media screen and (min-width: $min_desktop) {
-      margin-bottom: 60px;
-    }
+    @include fontRegular(16px, 400, 22.4px);
   }
 }
 
-//Meditation list
+//info text
 
-.meditation_list {
+.about_guides {
+  @include fontRegular(14px, 400, 19.6px, $main_text_color, center);
+  margin-bottom: 40px;
+  @media screen and (min-width: $min_tablet) {
+    @include fontRegular(16px, 400, 22.4px, $main_text_color, center);
+    margin-bottom: 48px;
+  }
+  @media screen and (min-width: $min_desktop) {
+    margin-bottom: 60px;
+  }
+}
+
+//guides and books list
+
+.guide_and_books_list {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   row-gap: 40px;
@@ -132,93 +122,8 @@
   }
 }
 
-.meditation_list_item {
+.guide_and_books_list_item {
   display: flex;
   flex-direction: column;
   gap: 12px;
-  @media screen and (min-width: $min_desktop) {
-  }
-}
-
-.waiting_card {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 205px;
-  border-radius: 30px;
-  background-image: linear-gradient(270deg, #e24668 -135.76%, #000 102.98%);
-  @media screen and (min-width: $min_tablet) {
-    height: 223px;
-  }
-  @media screen and (min-width: $min_desktop) {
-    height: 190px;
-  }
-}
-
-.card_logo {
-  width: 70px;
-  height: 70px;
-}
-
-.text_wrapper {
-  display: flex;
-}
-
-.video {
-  width: 328px;
-  height: 205px;
-  border-radius: 30px;
-  @media screen and (min-width: $min_tablet) {
-    height: 223px;
-    width: 356px;
-  }
-  @media screen and (min-width: $min_desktop) {
-    height: 190px;
-    width: 302px;
-  }
-}
-
-.name {
-  @include fontRegular(16px, 400, 22.4px);
-  flex: 2;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  & > p {
-    @include fontRegular(20px, 400, 22.4px);
-  }
-
-  @media screen and (min-width: $min_desktop) {
-  }
-}
-
-.is_waiting {
-  @include fontRegular(16px, 400, 22.4px);
-  flex: 1;
-}
-
-.button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 71px;
-  height: 48px;
-
-  border-radius: 30px;
-  background-color: $buttons_color;
-  margin-left: 24px;
-  & > svg {
-    width: 24px;
-    height: 24px;
-  }
-}
-
-.card_name {
-  @include fontRegular(18px, 400, 25.2px, $main_text_color, center);
-  text-wrap: balance;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  justify-content: center;
-  padding: 20px 50px;
 }
