--- a/components/Common/InternalNavTitle/InternalNavTitle.module.scss
+++ b/components/Common/InternalNavTitle/InternalNavTitle.module.scss
@@ -1,10 +1,15 @@
 @import "/styles/main.scss";
 
 .title {
-  @include fontRegular(32px, 400, 44.8px, $main_text_color, center);
+  font-size: 32px !important;
+  font-weight: 400 !important;
+  line-height: 1.4 !important;
+  color: $main_text_color;
+  text-align: center !important;
+
   margin-bottom: 28px;
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(64px, 400, 89.6px, $main_text_color, center);
+    font-size: 64px !important;
     margin-bottom: 40px;
   }
 }
