--- a/components/Common/HeroNav/HeroNav.module.scss
+++ b/components/Common/HeroNav/HeroNav.module.scss
@@ -3,6 +3,7 @@
 .list {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 6px;
   margin-bottom: 44px;
   @media screen and (min-width: $min_tablet) {
