--- a/components/Education/KarmologistPageTariffs/KarmologistPageTariffs.module.scss
+++ b/components/Education/KarmologistPageTariffs/KarmologistPageTariffs.module.scss
@@ -10,3 +10,16 @@
     margin-bottom: 60px;
   }
 }
+
+.warning {
+  margin-bottom: 37px;
+  @include fontRegular(16px, 400, 22.4px, $main_text_color, center);
+  
+  @media screen and (min-width: $min_tablet) {
+    @include fontRegular(18px, 400, 25.2px, $main_text_color, center);
+    margin-bottom: 50px;
+  }
+  @media screen and (min-width: $min_desktop) {
+    margin-bottom: 58px;
+  }
+}
