--- a/components/Education/WhatIsWaitingForYou/WhatIsWaitingForYou.module.scss
+++ b/components/Education/WhatIsWaitingForYou/WhatIsWaitingForYou.module.scss
@@ -24,7 +24,7 @@
   margin-bottom: 40px;
   @media screen and (min-width: $min_tablet) {
     margin-bottom: 48px;
-    text-align: center;
+    text-align: center !important;
   }
   @media screen and (min-width: $min_desktop) {
     margin-bottom: 60px;
