--- a/components/HumanPsychology/SendAppToAssociation/SendAppToAssociation.module.scss
+++ b/components/HumanPsychology/SendAppToAssociation/SendAppToAssociation.module.scss
@@ -1,5 +1,13 @@
 @import "/styles/main.scss";
 
+.section {
+  overflow: visible;
+}
+
+.container {
+  position: relative;
+}
+
 .title {
   text-align: center;
   margin-bottom: 40px;
@@ -71,5 +79,33 @@
 .img {
   @media screen and (min-width: $min_desktop) {
     width: 519px;
+  }
+}
+
+.slap {
+  display: none;
+  @media screen and (min-width: $min_tablet) {
+    position: absolute;
+    display: block;
+
+    top: -10%;
+    right: 0%;
+
+    width: 227px;
+    height: 287px;
+    transform: rotate(-90deg);
+
+    border-radius: 287px;
+    background-image: linear-gradient(
+      180deg,
+      rgba(207, 182, 145, 0.4) 0%,
+      rgba(207, 182, 145, 0.4) 45.14%
+    );
+
+    filter: blur(125px);
+  }
+  @media screen and (min-width: $min_desktop) {
+    right: 12%;
+    top: -12%;
   }
 }
