--- a/components/HumanPsychology/TasksAssociation/TasksAssociation.module.scss
+++ b/components/HumanPsychology/TasksAssociation/TasksAssociation.module.scss
@@ -1,5 +1,13 @@
 @import "/styles/main.scss";
 
+.section {
+  overflow: visible;
+}
+
+.container {
+  position: relative;
+}
+
 .title {
   text-align: center;
   margin-bottom: 40px;
@@ -12,6 +20,8 @@
 }
 
 .main_list {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -84,9 +94,7 @@
   @media screen and (min-width: $min_desktop) {
     padding: 51.5px 34px;
     &_gold {
-
       padding: 41px 40px;
-
     }
     &_light {
       flex-direction: column;
@@ -125,5 +133,32 @@
     height: 86px;
   }
   @media screen and (min-width: $min_desktop) {
+  }
+}
+
+.slap {
+  display: none;
+  @media screen and (min-width: $min_tablet) {
+    position: absolute;
+    display: block;
+
+    top: -10%;
+    left: 0%;
+
+    width: 227px;
+    height: 287px;
+    transform: rotate(-90deg);
+
+    border-radius: 287px;
+    background-image: linear-gradient(
+      180deg,
+      rgba(207, 182, 145, 0.4) 0%,
+      rgba(207, 182, 145, 0.4) 45.14%
+    );
+
+    filter: blur(125px);
+  }
+  @media screen and (min-width: $min_desktop) {
+    left: 10%;
   }
 }
