--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -15,6 +15,8 @@ $under_photo_gradient: linear-gradient(
 );
 $dropdown_bg: #1f1f1f;
 $card_bg: #fdfdfd;
+$card_bg_v2: #2e2e2e;
+$accent_v2:#CFB691;
 
 //sizes
 
