--- a/components/HumanPsychology/AboutFoundation/AboutFoundation.module.scss
+++ b/components/HumanPsychology/AboutFoundation/AboutFoundation.module.scss
@@ -21,6 +21,9 @@
   }
   @media screen and (min-width: $min_desktop) {
     flex-direction: row;
+    &:last-child {
+      flex-direction: row-reverse;
+    }
   }
 }
 
