--- a/components/Main/Feedback/Feedback.module.scss
+++ b/components/Main/Feedback/Feedback.module.scss
@@ -139,14 +139,15 @@
 }
 
 .blur {
-  width: 316px;
+  filter: blur(4px);
+  width: 590px;
   z-index: 0;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   @media screen and (min-width: $min_tablet) {
-    width: 368px;
+    width: 450px;
   }
 }
 
